--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-  <string name="app_name">Movies</string>
+    <string name="app_name">Unrd</string>
+    <string name="media">Media</string>
+    <string name="short_summary">Short Summary</string>
+    <string name="characters">Characters</string>
 </resources>
